--- a/src/less/import/reset.less
+++ b/src/less/import/reset.less
@@ -13,10 +13,11 @@
  */
  html, body {
    border: 0;
-   font-family: "Helvetica-Neue", "Helvetica", Arial, sans-serif;
+   font-family: Arial,Helvetica,sans-serif;
    line-height: 1.5;
    margin: 0;
    padding: 0;
+   font-size: 0.688em; /**/
  }
 
  div, span, object, iframe, img, table, caption, thead, tbody,
@@ -39,7 +40,7 @@ ol, ul, li, fieldset, legend, label {
 
 article, aside, canvas, figure, figure img, figcaption, hgroup,
 footer, header, nav, section, audio, video {
-	display: block;
+  display: block;
 }
 
 table {
