--- a/src/less/import/layout.less
+++ b/src/less/import/layout.less
@@ -1,3 +1,15 @@
 // --------------------------------------------------
 // Import / layout
 // --------------------------------------------------
+
+.main-body{
+  .main-sidebar-left{
+    width: @base-width-sidebar-left;
+    float: left;
+  }
+
+  .main-container{
+    overflow: hidden;
+  }
+
+}
