--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,12 +1,17 @@
-@import "import/reset";
 @import "import/variables";
 @import "import/elements";
 @import "import/util";
 @import "import/responsive";
+
+@import "import/theme";
+
+@import "import/reset";
 @import "import/layout";
 @import "import/override";
-@import "import/theme";
+
 @import "import/include/header";
+@import "import/include/sidebar";
+
 
 html, body, main, .main {
   width: 100%;
