--- a/src/less/import/reset.less
+++ b/src/less/import/reset.less
@@ -11,14 +11,19 @@
  * make sure we're resetting all spacing elements.
  *
  */
- html, body {
-   border: 0;
-   font-family: Arial,Helvetica,sans-serif;
-   line-height: 1.5;
-   margin: 0;
-   padding: 0;
-   font-size: 0.688em; /**/
- }
+
+html, body{
+  border: 0;
+  margin: 0;
+  padding: 0;
+}
+
+body{
+  font-family: Arial,Helvetica,sans-serif;
+  line-height: (12 / @base-unit-size) + 0em;
+  font-size: (11 / @base-unit-size) + 0em;
+}
+
 
  div, span, object, iframe, img, table, caption, thead, tbody,
  tfoot, tr, tr, td, article, aside, canvas, details, figure, hgroup, menu,
