--- a/src/less/import/variables.less
+++ b/src/less/import/variables.less
@@ -153,6 +153,7 @@
 // --------------------------------------------------
 //## Define the [description]
 @base-font-size: 16px;
+@base-unit-size: 16;
 
 @base-font-size-small: @base-font-size - 1;
 @base-font-size-x-small: @base-font-size-small - 2 ;
@@ -200,7 +201,7 @@
 @base-offset: 10px;
 @base-offset-horizontal: 10px;
 @base-offset-vertical: 10px;
-@base-width-sidebar-left: 250px;
+@base-width-sidebar-left: 160px;
 @base-width-sidebar-right: 300px;
 @base-separator-width: 5px;
 @base-transition-delay: 0.2s;
